Update and rename 2021-05-14-SeSoNeon to 2021-05-14-SeSoNeon.md

--- a/_posts/2021-05-14-SeSoNeon.md
+++ b/_posts/2021-05-14-SeSoNeon.md
@@ -7,8 +7,8 @@ layout: single
 그럼 물어보겠지? 무슨 인디밴드를 좋아하느냐고..! 그때 당당히 대답한다. 새소년 좋아한다고!
 
 한가지 안타까운건 내마음에 파도처럼 밀려들어온 이 엄청난 밴드를 열명중 일고여덟명은 몰라본다는 것이다.
+새소년을 본 모두의 마음이 새소년의 지배 하에 놓이기를 강력히 바란다...!
 
-엄청난 매력의 음악을 하는 이들을 꼭 알려 모두의 마음이 새소년의 지배 하에 놓이기를 강력히 바란다...!
 ---
 ### 새소년
 
